build libs react by esnext module

--- a/tsconfig.es2020.json
+++ b/tsconfig.es2020.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "rootDir": "./",
     // "composite": true,
-    "outDir": "build",
+    "outDir": "es2020",
     //"forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
@@ -20,7 +20,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ES2020",
     "useDefineForClassFields": false,
     "types": ["node", "react"],
     "resolveJsonModule": true,
