--- a/package.json
+++ b/package.json
@@ -3,24 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "rimraf": "^3.0.2",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "nb": "rimraf build && tsc --project tsconfig.json",
+    "build": "rimraf build && npm run esnext && npm run es5 && npm run es6",
+    "rmb": "rimraf build",
+    "esnext": "tsc --project tsconfig.json  --outDir cmj",
+    "es5": "tsc --project tsconfig.es5.json",
+    "es6": "tsc --project tsconfig.es6.json"
   },
   "eslintConfig": {
     "extends": [
