--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -2,10 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "rootDir": "./",
-    // "composite": true,
-    "outDir": "build",
-    //"forceConsistentCasingInFileNames": true,
+    "outDir": "es6",
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
     "declarationMap": true,
@@ -19,15 +17,14 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2020",
-    "module": "CommonJS",
+    "target": "es6",
+    "module": "esnext",
     "useDefineForClassFields": false,
-    "types": ["node", "react"],
+    "types": ["node"],
     "resolveJsonModule": true,
     "lib": [
       "dom",
       "dom.iterable",
-      "ES2020"
     ],
     "allowJs": true,
     "esModuleInterop": true,
